# squatter

./: .flake8  .vars.ini  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.cfg
.github/workflows/: build.yml
squatter/: __main__.py  __version__.py  templates.py
squatter/tests/: __init__.py  __main__.py
