[metadata]
name = squatter
description = Generates minimal setup.py to register a name on pypi
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/python-packaging/squatter
author = Amethyst Reese
author_email = amy@n7.gg

[options]
packages = squatter
setup_requires =
    setuptools_scm >= 8
    setuptools >= 38.3.0
python_requires = >=3.11
install_requires =
    setuptools >= 38.3.0

[options.entry_points]
console_scripts =
  squatter = squatter.__main__:cli

[check]
metadata = true
strict = true

[coverage:run]
branch = True
include = squatter/*
omit = squatter/tests/*

[coverage:report]
fail_under = 100
precision = 1
show_missing = True
skip_covered = True

[mypy]
ignore_missing_imports = True

[tox:tox]
envlist = py311, py312

[testenv]
deps = -rrequirements-dev.txt
whitelist_externals = make
commands =
    make test
setenv =
    py{311,312}: COVERAGE_FILE={envdir}/.coverage

[flake8]
ignore = E203, E231, E266, E302, E501, W503
max-line-length = 88
